All notable changes to this package will be documented in this file. For a
complete changelog, see https://github.com/JolleJolles/pythutils/commits/

Not yet in latest release:
2021-06-13:
    * Fixed name error of get_spaced_colors function
2021-04-27:
    * Changed line about installation of development version in readme
    * improved to_query function to better accomodate different instances
2021-05-13
    * Improved crop function to also work with one list/tuple of two points
2021-05-17
    * Fixed draw_traj function color space

Latest changes:
2021-04-09 - version 1.3.9
    * Extended namedcols function to pass when already rgb color is given

2020-09-16 - version 1.3.8
    * Removed pandas as general requirement as only needed for specific functions

2020-09-16 - version 1.3.7
    * Fixed typos in listfiles function

2020-08-28 - version 1.3.6
    * Removed h5py requirement as it was very specific to one function
    * Added chipnrs for isrpi function

2020-03-27 - version 1.3.5
    * Fixed pycamconv function with max resolution option

2020-03-27 - version 1.3.4
    * New maxrect function

2020-03-26 - version 1.3.3
    * Improved listfiles function's use of parameters

2020-03-25 - version 1.3.2
    * Fixed picamconv to have horizontal blocks of 16 pixels
    * Fixed name function throwing an error when working with directories

2020-03-25 - version 1.3.1
    * Improved error checking by changing asserts to raising exceptions
    * Added fourpt_transform function to get a top-down view of a cropped
      section of an image
    * Added sort_points function to sort points from tl to bl

2020-03-17 - version 1.3.0
    * Further generalised and improved mouse_events class
    * Added a function to fix the coordinates of two-point to be from LT to BR
    * Fixed draw_sliced_line function
    * Added draw_hcross function
    * Added helper class to view dictionary as an object
    * Fixed get_ext function for non-string input